--- a/module1-linear-correlation-regression/LS_DS_131_Simple_Linear_Regression.ipynb
+++ b/module1-linear-correlation-regression/LS_DS_131_Simple_Linear_Regression.ipynb
@@ -889,11 +889,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xWchYKdQ4TZ2",
-        "outputId": "970a72e4-e40c-491b-fcb1-d461ac5b9df8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xWchYKdQ4TZ2",
+        "outputId": "970a72e4-e40c-491b-fcb1-d461ac5b9df8"
       },
       "source": [
         "from scipy import stats\n",
@@ -914,11 +914,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zuxyx6vS6XA-",
-        "outputId": "7ca3be86-2cc5-4b44-8f2e-b6129c28d7ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zuxyx6vS6XA-",
+        "outputId": "7ca3be86-2cc5-4b44-8f2e-b6129c28d7ce"
       },
       "source": [
         "np.corrcoef(longbones['Nitro'], longbones['Time'])"
@@ -1687,11 +1687,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F11rGu0kQRar",
-        "outputId": "8bb2f5be-fdf4-4962-d217-97d78e012a75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F11rGu0kQRar",
+        "outputId": "8bb2f5be-fdf4-4962-d217-97d78e012a75"
       },
       "source": [
         "r, pval2 = stats.pearsonr(sleep['SWsleep'], sleep['Parasleep'])\n",
@@ -1792,16 +1792,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Joj5exSbChM3"
+        "id": "__r46xIEloZf"
       },
       "source": [
-        "\n",
-        "\n"
-      ],
-      "execution_count": 12,
-      "outputs": []
+        "For every additional hour of non-dreaming sleep, we expect a mammal to get .19 more hours of dreaming sleep"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1829,14 +1826,13 @@
       "metadata": {
         "id": "lK0huQRYChM5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6caa691f-dcae-4199-f436-0b345adbbf78"
+        "outputId": "07d75f59-def6-4ec4-b65c-4f69e6a3531a"
       },
       "source": [
         "#Specify the value of x we'd like to predict\n",
-        "x=\n",
+        "x= 6\n",
         "\n",
         "#Extract the slope and intercept values from the model paramters\n",
         "intercept = model.params[0]\n",
@@ -1848,21 +1844,21 @@
         "print(predict)\n",
         "\n",
         "#Specify the actual value of y\n",
-        "y =\n",
+        "y = 2\n",
         "\n",
         "#Calculate the resuidual y - y-hat\n",
         "residual = y - predict\n",
         "print(residual)"
       ],
-      "execution_count": 13,
+      "execution_count": 49,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-9db78816e3d1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    x=\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "-98.6509305771383\n",
+            "100.6509305771383\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
