--- a/module3-multiple-regression/LS_DS_133_Multiple_Regression_Assignment_AG.ipynb
+++ b/module3-multiple-regression/LS_DS_133_Multiple_Regression_Assignment_AG.ipynb
@@ -575,11 +575,11 @@
           "solution": true,
           "task": false
         },
-        "outputId": "ac3e2023-e5f7-4da3-a5d0-02a190253610",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "outputId": "ac3e2023-e5f7-4da3-a5d0-02a190253610"
       },
       "source": [
         "# Task 5\n",
@@ -1213,6 +1213,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "Az7aXj-N6sW6",
         "nbgrader": {
@@ -1224,22 +1227,38 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "90bb7547-fb19-4f5d-aa12-2b9f75b3b956"
       },
       "source": [
         "# Task 12\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
-        "\n",
+        "#raise NotImplementedError()\n",
+        "x1 =  1\n",
+        "x2 = 4000\n",
+        "intercept = model_2.params[0]\n",
+        "slope1  =  model_2.params[1]\n",
+        "slope2 = model_2.params[2]\n",
         "# Print out variables to troubleshoot!\n",
-        "#print('slope 2:', slope1)\n",
         "\n",
+        "print('intercept:', intercept, 'slope1:', slope1, 'slope2', slope2)\n",
+        "#print('slope 2:', slope1)\n",
+        "predicted = intercept + slope1 * x1 + slope2 * x2\n",
         "# View your prediction\n",
         "print('The predicted value for brain size is:', predicted)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "intercept: 347.5505005102838 slope1: -20.73164463467092 slope2 0.26043876646161157\n",
+            "The predicted value for brain size is: 1368.5739217220591\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1283,6 +1302,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "gX01KjaSQxkF",
         "nbgrader": {
@@ -1294,19 +1316,32 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "de1b6b53-6249-44eb-af2a-8ae705074e7d"
       },
       "source": [
         "# Task 13\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "x1 = 0\n",
+        "x2 = 3900\n",
+        "\n",
+        "predicted_2 = intercept + slope1 * x1 + slope2 * x2\n",
         "\n",
         "# View your prediction\n",
         "print('The predicted value for brain size is:', predicted_2)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The predicted value for brain size is: 1363.261689710569\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1385,6 +1420,10 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
         "deletable": false,
         "id": "DFlrjGquxKLW",
         "nbgrader": {
@@ -1396,7 +1435,8 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "86acd368-1563-47e7-93a9-8581f34b1889"
       },
       "source": [
         "# Task 14\n",
@@ -1405,13 +1445,141 @@
         "data_url_2 = 'https://raw.githubusercontent.com/LambdaSchool/data-science-practice-datasets/main/unit_1/Sleep/Sleep.csv'\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "df_sleep = pd.read_csv(data_url_2)\n",
+        "#raise NotImplementedError()\n",
         "\n",
         "# Print out your DataFrame\n",
         "df_sleep.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Animal</th>\n",
+              "      <th>Body</th>\n",
+              "      <th>Brain</th>\n",
+              "      <th>SWsleep</th>\n",
+              "      <th>Parasleep</th>\n",
+              "      <th>Totsleep</th>\n",
+              "      <th>Life</th>\n",
+              "      <th>Gest</th>\n",
+              "      <th>Pred</th>\n",
+              "      <th>Exposure</th>\n",
+              "      <th>Danger</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>African_giant_pouched_rat</td>\n",
+              "      <td>1.000</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>6.3</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>8.3</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Asian_elephant</td>\n",
+              "      <td>2547.000</td>\n",
+              "      <td>4603.0</td>\n",
+              "      <td>2.1</td>\n",
+              "      <td>1.8</td>\n",
+              "      <td>3.9</td>\n",
+              "      <td>69.0</td>\n",
+              "      <td>624.0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Baboon</td>\n",
+              "      <td>10.550</td>\n",
+              "      <td>179.5</td>\n",
+              "      <td>9.1</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>9.8</td>\n",
+              "      <td>27.0</td>\n",
+              "      <td>180.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Big_brown_bat</td>\n",
+              "      <td>0.023</td>\n",
+              "      <td>0.3</td>\n",
+              "      <td>15.8</td>\n",
+              "      <td>3.9</td>\n",
+              "      <td>19.7</td>\n",
+              "      <td>19.0</td>\n",
+              "      <td>35.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Brazilian_tapir</td>\n",
+              "      <td>160.000</td>\n",
+              "      <td>169.0</td>\n",
+              "      <td>5.2</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>6.2</td>\n",
+              "      <td>30.4</td>\n",
+              "      <td>392.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      Animal      Body   Brain  ...  Pred  Exposure  Danger\n",
+              "0  African_giant_pouched_rat     1.000     6.6  ...     3         1       3\n",
+              "1             Asian_elephant  2547.000  4603.0  ...     3         5       4\n",
+              "2                     Baboon    10.550   179.5  ...     4         4       4\n",
+              "3              Big_brown_bat     0.023     0.3  ...     1         1       1\n",
+              "4            Brazilian_tapir   160.000   169.0  ...     4         5       4\n",
+              "\n",
+              "[5 rows x 11 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1472,14 +1640,67 @@
         "# complete the log of gestational time - DO NOT DELETE\n",
         "\n",
         "import numpy as np\n",
-        "log_gest = np.log(df_sleep['Gest'])\n",
+        "df_sleep['log_gest'] = np.log(df_sleep['Gest'])\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TkpVvk9GyUdp",
+        "outputId": "7d306a30-5b67-4a22-8624-fd29ced3f030",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_sleep1 = ols('Parasleep ~ log_gest + C(Pred)', data = df_sleep).fit()\n",
+        "print(model_sleep1.summary())\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:              Parasleep   R-squared:                       0.454\n",
+            "Model:                            OLS   Adj. R-squared:                  0.378\n",
+            "Method:                 Least Squares   F-statistic:                     5.983\n",
+            "Date:                Tue, 03 Aug 2021   Prob (F-statistic):           0.000398\n",
+            "Time:                        11:37:36   Log-Likelihood:                -60.182\n",
+            "No. Observations:                  42   AIC:                             132.4\n",
+            "Df Residuals:                      36   BIC:                             142.8\n",
+            "Df Model:                           5                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "================================================================================\n",
+            "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "--------------------------------------------------------------------------------\n",
+            "Intercept        5.4498      0.840      6.489      0.000       3.746       7.153\n",
+            "C(Pred)[T.2]    -0.0895      0.515     -0.174      0.863      -1.135       0.956\n",
+            "C(Pred)[T.3]    -0.5359      0.567     -0.944      0.351      -1.687       0.615\n",
+            "C(Pred)[T.4]    -1.0337      0.568     -1.821      0.077      -2.185       0.117\n",
+            "C(Pred)[T.5]    -1.1972      0.532     -2.249      0.031      -2.277      -0.118\n",
+            "log_gest        -0.6877      0.165     -4.159      0.000      -1.023      -0.352\n",
+            "==============================================================================\n",
+            "Omnibus:                        5.334   Durbin-Watson:                   1.927\n",
+            "Prob(Omnibus):                  0.069   Jarque-Bera (JB):                6.290\n",
+            "Skew:                           0.188   Prob(JB):                       0.0431\n",
+            "Kurtosis:                       4.858   Cond. No.                         28.2\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1535,6 +1756,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "_vr5X9E5zj-m"
+      },
+      "source": [
+        "Answer = ''"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "deletable": false,
         "id": "2gWcjeocGVpR",
         "nbgrader": {
@@ -1546,17 +1778,60 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "da3057ca-5feb-4f23-c00d-e60a72dda0a2"
       },
       "source": [
         "# Task 16\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "model_sleep2 = ols('Parasleep ~ log_gest + C(Exposure)', data = df_sleep).fit()\n",
+        "print(model_sleep2.summary())\n",
+        "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:              Parasleep   R-squared:                       0.389\n",
+            "Model:                            OLS   Adj. R-squared:                  0.304\n",
+            "Method:                 Least Squares   F-statistic:                     4.583\n",
+            "Date:                Tue, 03 Aug 2021   Prob (F-statistic):            0.00245\n",
+            "Time:                        11:36:30   Log-Likelihood:                -62.540\n",
+            "No. Observations:                  42   AIC:                             137.1\n",
+            "Df Residuals:                      36   BIC:                             147.5\n",
+            "Df Model:                           5                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "====================================================================================\n",
+            "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------------\n",
+            "Intercept            4.6239      0.848      5.455      0.000       2.905       6.343\n",
+            "C(Exposure)[T.2]    -0.6132      0.487     -1.259      0.216      -1.601       0.375\n",
+            "C(Exposure)[T.3]    -0.9614      0.702     -1.369      0.180      -2.386       0.463\n",
+            "C(Exposure)[T.4]    -0.8153      0.690     -1.182      0.245      -2.214       0.583\n",
+            "C(Exposure)[T.5]    -0.9677      0.617     -1.570      0.125      -2.218       0.283\n",
+            "log_gest            -0.5171      0.214     -2.418      0.021      -0.951      -0.083\n",
+            "==============================================================================\n",
+            "Omnibus:                        7.922   Durbin-Watson:                   1.960\n",
+            "Prob(Omnibus):                  0.019   Jarque-Bera (JB):                6.895\n",
+            "Skew:                           0.794   Prob(JB):                       0.0318\n",
+            "Kurtosis:                       4.191   Cond. No.                         27.0\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
