working on mod4 assignment

--- a/module4-linear-algebra/LS_DS_134_Linear_Algebra_Assignment_AG.ipynb
+++ b/module4-linear-algebra/LS_DS_134_Linear_Algebra_Assignment_AG.ipynb
@@ -766,7 +766,7 @@
           "solution": true,
           "task": false
         },
-        "outputId": "fdafe7ae-d3ff-439d-cab4-5ab09f447585"
+        "outputId": "419332a4-ced1-476c-d746-39d85ba49d16"
       },
       "source": [
         "# Task 8\n",
@@ -774,19 +774,19 @@
         "# YOUR CODE HERE\n",
         "#raise NotImplementedError()\n",
         "\n",
-        "B = np.matmul(X_T_X_inv, X_T_X)\n",
+        "B = np.matmul(X_T_X_inv, X_T_Y)\n",
         "# Look at your matrix and the shape\n",
         "print(B)\n",
         "print(\"The shape of B is: \", B.shape)"
       ],
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[ 1.00000000e+00  1.70188358e-11]\n",
-            " [-3.74907370e-18  1.00000000e+00]]\n",
-            "The shape of B is:  (2, 2)\n"
+            "[[3.25573421e+02]\n",
+            " [2.63429339e-01]]\n",
+            "The shape of B is:  (2, 1)\n"
           ],
           "name": "stdout"
         }
@@ -808,11 +808,6 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        },
-        "outputId": "a8195819-3972-40d7-fdf6-e78dc9b7e1bb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 203
         }
       },
       "source": [
@@ -820,20 +815,8 @@
         "\n",
         "assert B.shape == (2, 1), \"Is your B matrix of the correct shape?\"\n"
       ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AssertionError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-24-5ddd3666518d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Task 8 - Test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Is your B matrix of the correct shape?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m: Is your B matrix of the correct shape?"
-          ]
-        }
-      ]
+      "execution_count": 27,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -856,6 +839,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "cAz2v2l27XQC",
         "nbgrader": {
@@ -867,17 +853,29 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "6e6fe9c1-c84c-4607-9062-0f6d7fb76733"
       },
       "source": [
         "# Task 9\n",
-        "\n",
+        "from statsmodels.formula.api import ols\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "model = ols('Brain ~ Head', data = df).fit()\n",
         "print(model.params)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Intercept    325.573421\n",
+            "Head           0.263429\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -927,6 +925,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "p5k_g4HBkPvv",
         "nbgrader": {
@@ -938,22 +939,42 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "9c776212-fe85-4ae8-d62c-7dc966d24f1c"
       },
       "source": [
         "# Task 10\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
         "\n",
+        "head = np.array(df['Head']).reshape(-1, 1)\n",
+        "df['Age_01'] = df['Age'] -1\n",
+        "\n",
+        "age = np.array(df['Age_01']).reshape(-1,1)\n",
+        "X = np.concatenate((Ones, head, age), axis = 1)\n",
         "# Print your results\n",
         "# Check the shape\n",
         "print(\"Shape of the array: \", X.shape)\n",
         "\n",
         "print(\"The first five rows: \\n\", X[:5])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Shape of the array:  (237, 3)\n",
+            "The first five rows: \n",
+            " [[   1 4512    0]\n",
+            " [   1 3738    0]\n",
+            " [   1 4261    0]\n",
+            " [   1 3777    0]\n",
+            " [   1 4177    0]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -980,7 +1001,7 @@
         "assert age.shape == (237, 1), \"Is your 'age' matrix of the correct shape?\"\n",
         "assert X.shape == (237, 3), \"Is your X matrix of the correct shape?\"\n"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1020,7 +1041,7 @@
         "# B = (X'X)^-1 X'Y\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
         "\n",
         "# Print your final result!\n",
         "print(B)"
