completed the mod4 assignment

--- a/module4-linear-algebra/LS_DS_134_Linear_Algebra_Assignment_AG.ipynb
+++ b/module4-linear-algebra/LS_DS_134_Linear_Algebra_Assignment_AG.ipynb
@@ -1023,6 +1023,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "K6hlXCxNlhhT"
+      },
+      "source": [
+        "#transpose X\n",
+        "X_T = np.transpose(X)\n",
+        "\n",
+        "#Multiply X_transpose with X\n",
+        "X_T_X = np.matmul(X_T, X)\n",
+        "\n",
+        "#get X inverse\n",
+        "X_T_X_inv = np.linalg.inv(X_T_X)\n",
+        "\n",
+        "# multiply Xtranspose by Y\n",
+        "X_T_Y = np.matmul(X_T, Y)\n",
+        "\n",
+        "#get the value of B by multiplying X_inverse and X_transpose Y\n",
+        "B = np.matmul(X_T_X_inv, X_T_Y)"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "wffPKuJVkrCB",
         "nbgrader": {
@@ -1034,7 +1061,8 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "7ab74e83-211a-461c-90e0-f8a8c8d6c6a0"
       },
       "source": [
         "# Task 11\n",
@@ -1046,8 +1074,18 @@
         "# Print your final result!\n",
         "print(B)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 3.47550501e+02]\n",
+            " [ 2.60438766e-01]\n",
+            " [-2.07316446e+01]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1068,6 +1106,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "1k7mU2R-lGeL",
         "nbgrader": {
@@ -1079,17 +1120,31 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "0662751d-afa4-4e6c-d850-4c76aa59f2f7"
       },
       "source": [
         "# Task 12\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "\n",
+        "model2 = ols('Brain ~ Head + Age_01', data = df).fit()\n",
         "print(model2.params)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Intercept    347.550501\n",
+            "Head           0.260439\n",
+            "Age_01       -20.731645\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1162,7 +1217,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6SuKxo-lYsCR"
+        "id": "6SuKxo-lYsCR",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "7fa7fe3a-c37b-476d-8d0c-d82ae01fe82f"
       },
       "source": [
         "# Task 13\n",
@@ -1176,7 +1236,7 @@
         "Strawberry_df_freq = pd.DataFrame(pd.crosstab(index=Strawberry_df['Words'],columns='count'))\n",
         "\n",
         "# Uncomment to display\n",
-        "#Strawberry_df_freq[0:50]\n",
+        "Strawberry_df_freq[0:50]\n",
         "\n",
         "\n",
         "# From Me to You - Lennon and McCartney (not disputed)\n",
@@ -1186,7 +1246,7 @@
         "Me_df_freq = pd.DataFrame(pd.crosstab(index=Me_df['Words'],columns='count'))\n",
         "\n",
         "# Uncomment to display\n",
-        "#Me_df_freq[0:50]\n",
+        "Me_df_freq[0:50]\n",
         "\n",
         "\n",
         "# Ticket to Ride (disputed)\n",
@@ -1196,10 +1256,305 @@
         "Ticket_df_freq = pd.DataFrame(pd.crosstab(index=Ticket_df['Words'],columns='count'))\n",
         "\n",
         "# Uncomment to display\n",
-        "# Ticket_df_freq[0:50]"
+        "Ticket_df_freq[0:50]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th>col_0</th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Words</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>I</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Im</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>a</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ah</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>around</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>away</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>baby</th>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>be</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>before</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>bringing</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>but</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>by</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>care</th>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>do</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>dont</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>down</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>driving</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>for</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>free</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gets</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>girl</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>going</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gonna</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>goodbye</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>got</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>her</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>high</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>is</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>its</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>know</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>living</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mad</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>me</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>my</th>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>never</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ought</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ride</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ridin</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>right</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sad</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>said</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>saying</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>she</th>\n",
+              "      <td>18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>shes</th>\n",
+              "      <td>14</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>so</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>that</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>thats</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>the</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>think</th>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>ticket</th>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "col_0     count\n",
+              "Words          \n",
+              "I             8\n",
+              "Im            2\n",
+              "a            12\n",
+              "ah            1\n",
+              "around        2\n",
+              "away          2\n",
+              "baby          6\n",
+              "be            4\n",
+              "before        2\n",
+              "bringing      2\n",
+              "but           4\n",
+              "by            4\n",
+              "care         10\n",
+              "do            4\n",
+              "dont         12\n",
+              "down          2\n",
+              "driving       2\n",
+              "for           2\n",
+              "free          2\n",
+              "gets          2\n",
+              "girl          2\n",
+              "going         2\n",
+              "gonna         2\n",
+              "goodbye       2\n",
+              "got          12\n",
+              "her           2\n",
+              "high          2\n",
+              "is            4\n",
+              "its           2\n",
+              "know          2\n",
+              "living        2\n",
+              "mad           2\n",
+              "me            8\n",
+              "my            6\n",
+              "never         2\n",
+              "ought         8\n",
+              "ride         12\n",
+              "ridin         2\n",
+              "right         4\n",
+              "sad           2\n",
+              "said          2\n",
+              "saying        2\n",
+              "she          18\n",
+              "shes         14\n",
+              "so            2\n",
+              "that          2\n",
+              "thats         2\n",
+              "the           2\n",
+              "think         8\n",
+              "ticket       12"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1220,6 +1575,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "5GYIQ3jf88MI",
         "nbgrader": {
@@ -1231,7 +1589,8 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "3493f9ae-fc23-4f74-ce81-bf3415166baa"
       },
       "source": [
         "# Task 14\n",
@@ -1242,13 +1601,26 @@
         "from numpy.linalg import norm\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError\n",
+        "dfs1= [Strawberry_df_freq, Ticket_df_freq]\n",
+        "concats1 = pd.concat(dfs1, axis=1)\n",
+        "concats1 = concats1.fillna(0)\n",
+        "concats1.columns = [\"Ticket to Ride\", \"Strawberry Fields\"]\n",
         "\n",
+        "cos_sim_1 = dot(concats1['Ticket to Ride'], concats1['Strawberry Fields'])/(norm(concats1['Ticket to Ride']) * norm(concats1['Strawberry Fields']))\n",
         "# Print out your result\n",
         "print(cos_sim_1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.324035859004908\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1294,6 +1666,9 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "deletable": false,
         "id": "uoj2UbIBCbJ5",
         "nbgrader": {
@@ -1305,20 +1680,35 @@
           "schema_version": 3,
           "solution": true,
           "task": false
-        }
+        },
+        "outputId": "988df7a6-e801-47c6-841b-8f462e6fd109"
       },
       "source": [
         "# Task 15\n",
         "# Compare From Me to You to Ticket to Ride\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()\n",
+        "#raise NotImplementedError()\n",
+        "dfs = [Ticket_df_freq, Me_df_freq]\n",
+        "concats2 = pd.concat(dfs, axis = 1)\n",
+        "concats2 = concats2.fillna(0)\n",
+        "concats2.columns = [\"Ticket to Ride\", \"From Me to You\"]\n",
+        "\n",
+        "cos_sim_2 = dot(concats2[\"Ticket to Ride\"], concats2[\"From Me to You\"])/(norm(concats2[\"Ticket to Ride\"])*norm(concats2[\"From Me to You\"]))\n",
         "\n",
         "# Print out your result\n",
         "print(cos_sim_2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.2882268853551227\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1399,9 +1789,10 @@
         "# Task 16\n",
         "\n",
         "# YOUR CODE HERE\n",
-        "raise NotImplementedError()"
+        "#raise NotImplementedError()\n",
+        "Answer = 'A'"
       ],
-      "execution_count": null,
+      "execution_count": 77,
       "outputs": []
     },
     {
